--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Principal==0.4.0
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
@@ -23,6 +24,7 @@ MarkupSafe==1.0
 nltk==3.3
 passlib==1.7.1
 psutil==5.4.8
+psycopg2==2.7.6.1
 PyJWT==1.6.4
 python-dateutil==2.7.3
 python-editor==1.0.3
@@ -37,5 +39,3 @@ visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.2.1
 WTForms-JSON==0.3.3
-gunicorn
-psycopg2
