--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ psutil==5.4.8
 psycopg2==2.7.6.1
 PyJWT==1.6.4
 python-dateutil==2.7.3
+python-dotenv==0.9.1
 python-editor==1.0.3
 pytz==2018.5
 requests==2.20.0
